# haskell-event-algebra-learning-project

./: .gitignore  README.md  Vagrantfile  estream.cabal
.provisioning/development/: hosts  init-system.sh  playbook.yml
snaplets/heist/templates/: base.tpl
src/: Application.hs  Handlers.hs  Routes.hs  Site.hs
src/EStream/: Internal.hs  Parsec.hs  Tail.hs
static/: bower.json  build.js  package.json
static/src/: app.js  appConfig.js  router.js
static/src/components/: hello.jsx  loglist.jsx  watchall.jsx  watchdevice.jsx
test/: Test.hs
