Name:                estream
Version:             1.0.0.0
Synopsis:            Server for streaming events from Redis PubSub to a websocket.
Description:         Server for streaming events from Redis PubSub to a websocket.
License:             AllRightsReserved
Author:              Parnell Springmeyer
Maintainer:          parnell@digitalmentat.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Data-Files:
  etc/stdout.log.1
  LICENSE
  README.md

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable estream
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.13    && < 0.14,
    parsec                    >= 3       && < 4,
    attoparsec                >= 0.12    && < 0.13,
    aeson                     >= 0.7     && < 0.8,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    stm                       >= 2.4.3   && < 2.5,
    transformers              >= 0.3.0.0 && < 0.4,
    unix                      >= 2.6.0.1 && < 2.7,
    async                     >= 2.0.1   && < 2.1,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    hedis                     >= 0.6     && < 0.7,
    snaplet-redis             >= 0.1     && < 0.2,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    websockets-snap           >= 0.8     && < 0.9,
    process                   >= 1.1     && < 1.2,
    websockets                >= 0.8     && < 0.9,
    text                      >= 0.11    && < 1.2,
    time                      >= 1.1     && < 1.5,
    bytestring                >= 0.10.0  && < 0.10.1,
    fsnotify                  >= 0.1.0.2 && < 0.1.1,
    containers                >= 0.5.0.0 && < 0.6,
    system-filepath           >= 0.4.12  && < 0.5,
    pipes                     >= 4.1.1   && < 4.2,
    pipes-concurrency         >= 2.0.2   && < 2.1,
    xmlhtml                   >= 0.1

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 4.2

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

Test-Suite tests
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test, src
  Ghc-Options:          -Wall
  Main-Is:              Test.hs
  Other-Modules:
    EStream.Internal,
    EStream.Parsec

  Build-Depends:
    base                       >= 4.4      && < 5,
    time                       >= 1.4      && < 1.5,
    cmdargs                    >= 0.10.7   && < 0.11,
    hslogger                   >= 1.2.3    && < 1.3,
    vector                     >= 0.10     && < 0.11,
    text                       >= 1.1.0.1  && < 1.2,
    system-filepath            >= 0.4.12   && < 0.5,
    attoparsec                 >= 0.12     && < 0.13,
    bytestring                 >= 0.9.1    && < 0.11,
    QuickCheck                 >= 2.6      && < 2.8,
    HUnit                      >= 1.2.5.2  && < 1.3,
    tasty                      >= 0.8      && < 0.9,
    tasty-golden               >= 2.2.1    && < 2.3,
    tasty-hunit                >= 0.8.0.1  && < 0.9,
    tasty-quickcheck           >= 0.8      && < 0.9
